--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-*{background-color: black;}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+*{background-color: black; font-family: 'Poppins', sans-serif;} 
 .frontPage{
     display: flex;
     flex-direction: column;
@@ -18,6 +20,8 @@
     flex-direction: column;
     background-color: blanchedalmond;
      text-align: left;
+     font-family: 'Oswald', sans-serif;
+     
 }
 .name{
     color: blanchedalmond;
